# bibscrap

./: .crowdin.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  LICENSE.rst  Makefile  Pipfile  README.md  README.rst  bibscrap-main.py  conda-requirements.txt  crowdin.yml  pip-requirements.txt  pyproject.toml  requirements.txt  scrapy.cfg  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---feature-request.md  -rocket--feature-request.md  bug_report.md
.github/workflows/: build.yml  ci.yml
bibscrap/: __init__.py  __main__.py  app.py  errors.py  fetch.py  items.py  middlewares.py  models.py  pipelines.py  settings.py  spider.py  util.py
bibscrap/cli/: __init__.py  app.py
bibscrap/cli/commands/: __init__.py  about.py  command.py
bibscrap/core/: __init__.py  event.py  models.py
bibscrap/fetch/: __init__.py
bibscrap/spiders/: acmdl.py  bibscrapspider.py  ieeexplore.py
changes/: 3.locale
doc/: conf.py  glossary.rst  index.rst
doc/_static/: custom.css
docs/: api.rst  conf.py  contributing.rst  dev.rst  glossary.rst  index.rst  license.rst  news.rst  overview.rst  refs.bib  requirements.txt  sphinxext.rst  todo.rst  user.rst
docs/_ext/bibscrap/: __init__.py
docs/_ext/bibscrap/sphinx/: acmref.py
docs/_ext/mepcott/: acmref.py
docs/_static/css/: colors.css  refs.css  rtd.css  todolist.css
docs/_static/img/: bibscrap.ai
docs/_templates/: footer.html  layout.html
locale/en/LC_MESSAGES/: bibscrap.pot
locale/ja/LC_MESSAGES/: bibscrap.pot
tests/: bibscrap_app_test.py  bibscrap_test.py
