[tool.poetry]
name = "bibscrap"
version = "0.1.0-alpha.0"
description = "Semi-automated tools for systematic literature reviews."
readme = "README.rst"
authors = ["Michael E. Cotterell <mepcotterell@gmail.com>"]
maintainers = ["Michael E. Cotterell <mepcotterell@gmail.com>"]
license = "MIT"
homepage = "https://github.com/cotterell/bibscrap"
repository = "https://github.com/cotterell/bibscrap"
documentation = "https://bibscrap.readthedocs.io/"
keywords = [
    "bibscrap",
    "literature review",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
include = [
    "bibscrap",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/cotterell/bibscrap/issues"

[tool.poetry.dependencies]
python = "^3.8"
cleo = "^1.0.0a4"
scrapy = "^2.5.1"
single-source = "^0.2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
black = "^21.9b0"
tox = "^4.0.0a9"
Sphinx = { version = "^4.2.0", optional = true }
darglint = "^1.8.0"
pytest = "^6.2.5"
coverage = "^6.0.2"
codecov = "^2.1.12"
sphinx-rtd-theme = { version = "^1.0.0", optional = true }
sphinxcontrib-bibtex = { version = "^2.4.1", optional = true }

[tool.poetry.extras]
docs = [
    "Sphinx",
    "sphinx_rtd_theme",
    "sphinxcontrib-bibtex",
]

[tool.poetry.scripts]
poetry = 'bibscrap.cli.app:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
