[tool.poetry]
name = "bibscrap"
version = "0.1.0-alpha.5"
description = "Semi-automated tools for systematic literature reviews."
readme = "README.rst"
authors = ["Michael E. Cotterell <mepcotterell@gmail.com>"]
maintainers = ["Michael E. Cotterell <mepcotterell@gmail.com>"]
license = "MIT"
homepage = "https://github.com/cotterell/bibscrap"
repository = "https://github.com/cotterell/bibscrap"
documentation = "https://bibscrap.readthedocs.io/"
keywords = [
    "bibscrap",
    "literature review",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
include = [
    "bibscrap",
    "LICENSE.rst",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/cotterell/bibscrap/issues"

[tool.poetry.dependencies]
python = "^3.8"
cleo = "^1.0.0a4"
single-source = "^0.2.0"
Sphinx = { version = "^4.5.0", optional = true }
sphinx-rtd-theme = { version = "^1.0.0", optional = true }
sphinxcontrib-bibtex = { version = "^2.4.1", optional = true }
sphinx-panels = { version = "^0.6.0", optional = true }
black = { version = "^22.3.0", optional = true }
pre-commit = { version = "^2.18.1", optional = true }
tox = { version = "^4.0.0b1", optional = true }
pydocstyle = { version = "^6.1.1", optional = true, extras = ["toml"] }
toml = { version = "*", optional = true }
pytest = { version = "^7.1.1", optional = true }
coverage = { version = "^6.3.2", optional = true }
codecov = { version = "^2.1.12", optional = true }
towncrier = { version = "^21.9.0", optional = true }
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
pyquery = "^1.4.3"

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
devtools = [
    "black",
    "pre-commit",
    "tox",
    "pydocstyle",
    "toml",
    "pytest",
    "coverage",
    "codecov",
    "towncrier",
]
docs = [
    "Sphinx",
    "sphinx_rtd_theme",
    "sphinxcontrib-bibtex",
    "sphinx-panels",
]

[tool.poetry.scripts]
bibscrap = 'bibscrap.cli.app:main'

[tool.towncrier]
directory = "changes"
package = "bibscrap"
package_dir = "bibscrap"
filename = "docs/news.rst"
wrap = true
issue_format = ":issue:`{issue}`"

[[tool.towncrier.type]]
directory = "locale"
name = "Internationalization and Localization"
showcontent = true

[tool.pydocstyle]
convention = "google"

[tool.bibscrap.logging]
version = 1
disable_existing_loggers = false

[tool.bibscrap.logging.formatters.bibscrap]
format = "{asctime} {levelname: <8} {name: <15} {message}"
datefmt = "%Y-%m-%d %H:%M:%S"
style = "{"

[tool.bibscrap.logging.handlers.cli]
level = "INFO"
class = "logging.StreamHandler"
formatter = "bibscrap"

[tool.bibscrap.logging.loggers.bibscrap]
handlers = ["cli"]
level = "INFO"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
