[metadata]
name = bibscrap-mepcotterell
version = 0.0.1
url = https://github.com/cotterell/bibscrap
author = Michael E. Cotterell
author_email = mepcotterell@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = open tools for systematic literature reviews
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
python_requires = >=3.8