[metadata]
name = bibscrap
version = attr: bibscrap.__version__
url = https://github.com/cotterell/bibscrap
author = Michael E. Cotterell
author_email = mepcotterell@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Semi-automated tools for systematic literature reviews.
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
python_requires = >=3.9
