[metadata]
name = bibscrap
version = attr: bibscrap.__version__
description = Semi-automated tools for systematic literature reviews.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/cotterell/bibscrap
author = Michael E. Cotterell
author_email = mepcotterell@gmail.com
maintainer = Michael E. Cotterell
maintainer_email = mepcotterell@gmail.com
license = MIT
license_file = LICENSE.rst
license_files =
    LICENSE.rst
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Utilities
project_urls =
    Bug Tracker = https://github.com/cotterell/bibscrap/issues
    Documentation = https://bibscrap.readthedocs.io/
    Source = https://github.com/cotterell/bibscrap

[options]
packages = find:
install_requires =
    scrapy
python_requires = >=3.9

[options.entry_points]
console_scripts =
    bibscrap = bibscrap:main

[bdist_rpm]
doc_files = docs AUTHORS INSTALL LICENSE README.rst
